k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "test"
spec:
  type: LoadBalancer
  loadBalancerIP: 20.249.144.238
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: gateway
